--- a/test2.html
+++ b/test2.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <center>
-            <img src="https://cdx.solo.to/user/th/60932fa03804d0_10278098.jpg" alt="meli">
+            <img src="https://raw.githubusercontent.com/MauroRodriguez94/test-web-view-cho/83cd286eb78c22195676062e3a0a68174de740fe/ilus.svg" alt="meli">
         </center>
     </body>
 </html>
